--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,18 +1,16 @@
-[package]
-name = "shortcuter"
-version = "0.1.0"
-edition = "2024"
+# Shortcuter
 
-[dependencies]
-mlua = { version = "0.11.4", features = [
-    "lua51",
-    "vendored",
-    "serde",
-    "async",
-] }
-win-utf8-rs = "0.2.1"
-json5 = "0.4"
-fluaterm = "0.2.2"
+[workspace]
+members = ["main", "config", "loader"]
+
+resolver = "3"
+
+[workspace.dependencies]
+config = { path = "config" }
+loader = { path = "loader" }
+
+# Dependencies out of the Workspace
+fluaterm = { workspace = false, version = "0.2.2" }
 
 [profile.dev]
 opt-level = 0      # fastest build, slowest runtime
