--- a/loader/Cargo.toml
+++ b/loader/Cargo.toml
@@ -2,3 +2,12 @@
 name = "loader"
 version = "0.1.0"
 edition = "2024"
+
+[dependencies]
+mlua = { version = "0.11.4", features = [
+    "lua51",
+    "vendored",
+    "serde",
+    "async",
+] }
+dirs-next = "2.0"
